Added storm and gambit images

--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
 					<a href="res/storm03.jpg" target="_blank"><img src="tmb/storm03.jpg" /></a>
 					<a href="res/storm00.jpg" target="_blank"><img src="tmb/storm00.jpg" /></a>
 					<a href="res/storm02.jpg" target="_blank"><img src="tmb/storm02.jpg" /></a>
-					<a href="res/cable00.jpg" target="_blank"><img src="tmb/cable00.jpg" /></a>
+					<a href="img/storm04.jpg" target="_blank"><img src="tmb/storm04.jpg" /></a>
+					<a href="img/storm05.jpg" target="_blank"><img src="tmb/storm05.jpg" /></a>
 					<a href="res/sunfire00.jpg" target="_blank"><img src="tmb/sunfire00.jpg" /></a>
 					<a href="res/gambit00.jpg" target="_blank"><img src="tmb/gambit00.jpg" /></a>
 					<a href="res/gambit01.jpg" target="_blank"><img src="tmb/gambit01.jpg" /></a>
 					<a href="res/gambit02.jpg" target="_blank"><img src="tmb/gambit02.jpg" /></a>
-					<a href="res/bishop00.jpg" target="_blank"><img src="tmb/bishop00.jpg" /></a>
+					<a href="img/gambit03.jpg" target="_blank"><img src="tmb/gambit03.jpg" /></a>
 
 					<a href="res/res04.jpg" target="_blank"><img src="tmb/img04.jpg" /></a>
 				</div>
